--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Goofy"
         tools:targetApi="31"
-        android:name=".GlobalApplication">
+        android:name=".onboard.GlobalApplication">
         <activity
-            android:name=".MainActivity"
+            android:name=".onboard.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
