--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    // roomDB
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
     //ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     //MaterialDesign
