--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,16 @@ dependencies {
 
     // life cycle scope
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    // viewmodel scope
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    //lifecycle
+    def lifecycle_version = "2.6.0-alpha03"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    //state module
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    //annotation processor
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Testing Navigation
     androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
