--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,17 @@
         android:theme="@style/Theme.Goofy"
         tools:targetApi="31">
         <activity
-            android:name=".PaddlingActivity"
+            android:name=".home.SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".home.PaddlingActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
